# rust-actix-diesel-auth-scaffold

./: .env  Cargo.toml  README.md  debian.Dockerfile  diesel.toml  docker-compose.yml  openapi.json
.github/workflows/: test.yml
migrations/2024-10-19-153830_create_clients/: up.sql
migrations/2024-10-19-155104_create_users/: up.sql
migrations/2024-10-21-162830_create_users/: up.sql
migrations/2024-10-21-162833_create_clients/: up.sql
src/: errors.rs  lib.rs  schema.rs
src/middleware/: bearer.rs
src/models/: client.rs  clients.rs  mod.rs  token.rs  user.rs  users.rs
src/routes/: authorisation.rs  logout.rs  mod.rs  secret.rs  token.rs
src/routes/token/: helpers.rs  mod.rs  routes.rs  types.rs
src/tests/: mod.rs
src/tests/routes/: mod.rs  test_token.rs
src/tests/routes/secret/: helpers.rs  mod.rs  test_secret.rs
src/tests/routes/token/: helpers.rs  mod.rs  test_helpers.rs  test_token.rs
