[package]
name = "rust-actix-diesel-auth-scaffold"
version = "0.0.3-alpha"
edition = "2021"
license = "Apache-2.0 OR MIT OR CC0"

[dependencies]
actix-http = "^3.11"
actix-web = "^4"
actix-web-httpauth = "^0.8"
argon2 = { version="0.6.0-rc.0", features = ["default", "rand", "password-hash"] }
base64 = "^0.22"
chrono = { version = "^0.4", features = ["serde"] }
derive_more = { version = "^1", features = ["debug", "display", "error", "from", "from_str"] }
diesel = { version = "^2.2", features = ["postgres", "chrono", "r2d2", "serde_json"] }
diesel_migrations = { version = "^2.2", features = ["postgres"] }
dotenvy = "^0.15"
lazy_static = "^1.5"
log = "^0.4"
redis = { version = "^0.27", features = ["aio", "async-std-comp", "script"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
strum_macros = "^0.27"
utoipa = { version = "^5.4", features = ["actix_extras"] }
uuid = { version = "^1.17", features = ["v4"] }
